# LogisticRegressionParallelComputing

./: .gitignore  CMakeLists.txt  README.md  documents.md
CUDA/: CMakeLists.txt  binding.cpp  kernel.cu
buidld-window/: CMakeCache.txt  Makefile
include/: model.h  utils.h
pythoncode/: Logistic.cp311-win_amd64.pyd  README.md  lab.ipynb  model.py  requirements.txt  sample.ipynb  test.py
src/: bind.cpp  main.cpp  model.cpp  utils.cpp
